--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.15.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "ejs": "~2.4.1",
-    "express": "~4.13.4",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "connect-redis": "^3.1.0",
+    "ejs": "^2.5.2",
+    "express.oi": "git+https://github.com/sibartlett/express.oi.git"
   }
 }
